--- a/app/src/index.css
+++ b/app/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #43e0d9;
 }
 
 code {
